#------------------------------------------------------------------------------
# Include source and build directories
#------------------------------------------------------------------------------
set(LOCAL_INCLUDE_DIR
  ${PDC_INCLUDES_BUILD_TIME}
  ${PROJECT_BINARY_DIR}
  ${PDC_SOURCE_DIR}
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}
  ${PDC_SOURCE_DIR}/src/server/include
  ${PDC_SOURCE_DIR}/src/server/transform/include
  ${PDC_SOURCE_DIR}/src/server/pdc_server_region
  ${PDC_SOURCE_DIR}/src/server/pdc_server_region/include
  ${PDC_SOURCE_DIR}/src/server/dablooms
  ${PDC_SOURCE_DIR}/src/api/include
  ${PDC_SOURCE_DIR}/src/api/pdc_obj/include
  ${PDC_SOURCE_DIR}/src/api/pdc_region/include
  ${PDC_SOURCE_DIR}/src/api/pdc_query/include
  ${PDC_SOURCE_DIR}/src/api/pdc_hist/include
  ${PDC_SOURCE_DIR}/src/api/profiling/include
  ${PDC_SOURCE_DIR}/src/api/pdc_tf/include
  ${PDC_SOURCE_DIR}/src/utils/include
)

include_directories(
  ${LOCAL_INCLUDE_DIR}
  ${MERCURY_INCLUDE_DIR}
  ${FASTBIT_INCLUDE_DIR}
)

#------------------------------------------------------------------------------
# External dependencies
#------------------------------------------------------------------------------
# profiling
# set(PDC_EXT_LIB_DEPENDENCIES pdcprof ${PDC_EXT_LIB_DEPENDENCIES})
# set(PDC_EXT_INCLUDE_DEPENDENCIES ${CMAKE_CURRENT_SOURCE_DIR}/profiling)
# set(PDC_EXPORTED_LIBS pdcprof)

# Mercury
find_package(MERCURY REQUIRED)
if(MERCURY_FOUND)
  set(PDC_EXT_INCLUDE_DEPENDENCIES ${MERCURY_INCLUDE_DIR}
    ${PDC_EXT_INCLUDE_DEPENDENCIES}
    )
  set(PDC_EXT_LIB_DEPENDENCIES ${MERCURY_LIBRARIES} ${PDC_EXT_LIB_DEPENDENCIES})
endif()

include_directories(${PDC_EXT_INCLUDE_DEPENDENCIES})

#------------------------------------------------------------------------------
# Configure module header files
#------------------------------------------------------------------------------
# Set unique vars used in the autogenerated config file (symbol import/export)
if(BUILD_SHARED_LIBS)
  set(PDC_BUILD_SHARED_LIBS 1)
  set(PDC_LIBTYPE SHARED)
else()
  set(PDC_BUILD_SHARED_LIBS 0)
  set(PDC_LIBTYPE STATIC)
endif()

if(PDC_ENABLE_TIMING)
    add_definitions(-DPDC_TIMING=1)
endif()

#------------------------------------------------------------------------------
# Set sources
#------------------------------------------------------------------------------
set(PDC_SRCS
  ${PDC_SOURCE_DIR}/src/api/pdc.c
  ${PDC_SOURCE_DIR}/src/api/pdc_client_connect.c
  ${PDC_SOURCE_DIR}/src/api/pdc_obj/pdc_prop.c
  ${PDC_SOURCE_DIR}/src/api/pdc_obj/pdc_cont.c
  ${PDC_SOURCE_DIR}/src/api/pdc_obj/pdc_obj.c
  ${PDC_SOURCE_DIR}/src/api/pdc_hist/pdc_hist_pkg.c
  ${PDC_SOURCE_DIR}/src/api/pdc_obj/pdc_mpi.c
  ${PDC_SOURCE_DIR}/src/api/pdc_query/pdc_query.c
  ${PDC_SOURCE_DIR}/src/api/pdc_region/pdc_region.c
  ${PDC_SOURCE_DIR}/src/api/pdc_region/pdc_region_transfer.c
  ${PDC_SOURCE_DIR}/src/api/pdc_tf/pdc_tf.c
  ${PDC_SOURCE_DIR}/src/server/pdc_client_server_common.c
  ${PDC_SOURCE_DIR}/src/server/transform/pdc_tf_server.c
  ${PDC_SOURCE_DIR}/src/server/transform/pdc_tf_common.c
  ${PDC_SOURCE_DIR}/src/server/transform/pdc_tf_builtin_common.c
  ${PDC_SOURCE_DIR}/src/server/pdc_server_region/pdc_server_region_transfer.c
  ${PDC_SOURCE_DIR}/src/server/pdc_server_region/pdc_server_region_cache.c
  ${PDC_SOURCE_DIR}/src/server/pdc_server_region/pdc_server_region_transfer_metadata_query.c
  ${PDC_SOURCE_DIR}/src/utils/pdc_interface.c
  ${PDC_SOURCE_DIR}/src/utils/pdc_region_utils.c
  ${PDC_SOURCE_DIR}/src/commons/utils/pdc_malloc.c
)

set(PDC_COMMON_INCLUDE_DIRS ${PDC_COMMON_INCLUDE_DIRS})

#------------------------------------------------------------------------------
# Libraries
#------------------------------------------------------------------------------
# PDC
set(PDC_BUILD_INCLUDE_DEPENDENCIES
  ${PDC_COMMON_INCLUDE_DIRS}
  ${LOCAL_INCLUDE_DIR}
)

message(STATUS "PDC_BUILD_INCLUDE_DEPENDENCIES: ${PDC_BUILD_INCLUDE_DEPENDENCIES}")

add_library(pdc ${PDC_SRCS})

target_include_directories(pdc
  PUBLIC  "$<BUILD_INTERFACE:${PDC_BUILD_INCLUDE_DEPENDENCIES}>"
          $<INSTALL_INTERFACE:${PDC_INSTALL_INCLUDE_INTERFACE}>
)

message(STATUS "PDC_EXPORTED_LIBS: ${PDC_EXPORTED_LIBS}")
message(STATUS "PDC_EXT_LIB_DEPENDENCIES: ${PDC_EXT_LIB_DEPENDENCIES}")
message(STATUS "PDC_COMMONS_LIBRARIES: ${PDC_COMMONS_LIBRARIES}")

target_link_libraries(pdc
  ${PDC_COMMONS_LIBRARIES}
  ${PDC_EXPORTED_LIBS}
  ${PDC_EXT_LIB_DEPENDENCIES}
  -ldl
)
pdc_set_lib_options(pdc "pdc" ${PDC_LIBTYPE})

set(PDC_EXPORTED_LIBS pdc ${PDC_EXPORTED_LIBS})

add_executable(close_server
               close_server.c
)

target_link_libraries(close_server pdc ${PDC_COMMON_LIBRARIES})

install(
  TARGETS
    close_server
  DESTINATION ${PDC_INSTALL_BIN_DIR}
)

#-----------------------------------------------------------------------------
# Specify project header files to be installed
#-----------------------------------------------------------------------------
set(PDC_HEADERS
  ${PDC_SOURCE_DIR}/src/api/include/pdc.h
  ${PDC_SOURCE_DIR}/src/api/pdc_obj/include/pdc_cont.h
  ${PDC_SOURCE_DIR}/src/api/pdc_obj/include/pdc_mpi.h
  ${PDC_SOURCE_DIR}/src/api/pdc_obj/include/pdc_obj.h
  ${PDC_SOURCE_DIR}/src/api/pdc_region/include/pdc_region.h
  ${PDC_SOURCE_DIR}/src/api/pdc_obj/include/pdc_prop.h
  ${PDC_SOURCE_DIR}/src/api/pdc_obj/include/pdc_cont_pkg.h
  ${PDC_SOURCE_DIR}/src/api/pdc_obj/include/pdc_obj_pkg.h
  ${PDC_SOURCE_DIR}/src/api/pdc_obj/include/pdc_prop_pkg.h
  ${PDC_SOURCE_DIR}/src/api/pdc_query/include/pdc_query.h
  ${PDC_SOURCE_DIR}/src/api/pdc_region/include/pdc_region.h
  ${PDC_SOURCE_DIR}/src/api/pdc_tf/include/pdc_tf.h
  ${PDC_SOURCE_DIR}/src/api/include/pdc_client_connect.h
  ${PDC_SOURCE_DIR}/src/server/include/pdc_client_server_common.h
  ${PDC_SOURCE_DIR}/src/commons/utils/include/pdc_private.h
  ${PDC_SOURCE_DIR}/src/server/transform/include/pdc_tf_builtin_common.h
  ${PDC_SOURCE_DIR}/src/server/transform/include/pdc_tf_common.h
  ${PDC_SOURCE_DIR}/src/commons/collections/include/pdc_dg.h
  ${PDC_SOURCE_DIR}/src/commons/utils/include/pdc_timing.h
  ${PDC_SOURCE_DIR}/src/server/pdc_server_region/include/pdc_server_region_transfer_metadata_query.h
  ${PDC_SOURCE_DIR}/src/server/pdc_server_region/include/pdc_server_region_transfer.h
  ${PDC_SOURCE_DIR}/src/commons/index/dart/include/dart_core.h
  ${PDC_SOURCE_DIR}/src/commons/index/dart/include/dart_algo.h
  ${PDC_SOURCE_DIR}/src/commons/index/dart/include/dart_math.h
  ${PDC_SOURCE_DIR}/src/commons/index/dart/include/dart_utils.h
  ${PDC_SOURCE_DIR}/src/commons/utils/include/thpool.h
  ${PDC_SOURCE_DIR}/src/commons/utils/include/string_utils.h
  ${PDC_SOURCE_DIR}/src/commons/utils/include/query_utils.h
  ${PDC_SOURCE_DIR}/src/commons/collections/libhl/include/comparators.h
  ${PDC_SOURCE_DIR}/src/commons/collections/libhl/include/linklist.h
  ${PDC_SOURCE_DIR}/src/commons/collections/libhl/include/rbtree.h
  ${PDC_SOURCE_DIR}/src/commons/collections/libhl/include/atomic_defs.h
  ${PDC_SOURCE_DIR}/src/commons/collections/include/pdc_set.h
  ${PDC_SOURCE_DIR}/src/commons/collections/include/pdc_vector.h
  ${PDC_SOURCE_DIR}/src/commons/collections/include/pdc_compare.h
  ${PDC_SOURCE_DIR}/src/commons/collections/include/pdc_hash.h
  ${PDC_SOURCE_DIR}/src/commons/collections/include/pdc_deque.h
  ${PDC_SOURCE_DIR}/src/commons/collections/include/art.h
  ${PDC_SOURCE_DIR}/src/commons/collections/include/pdc_hash_table.h
  ${PROJECT_BINARY_DIR}/pdc_config_sys.h
  ${PROJECT_BINARY_DIR}/pdc_config.h
  )

#-----------------------------------------------------------------------------
# Add file(s) to CMake Install
#-----------------------------------------------------------------------------
install(
  FILES
    ${PDC_HEADERS}
  DESTINATION
    ${PDC_INSTALL_INCLUDE_DIR}
  COMPONENT
    headers
)

install(
  FILES
    ${PDC_HL_HEADERS}
  DESTINATION
    ${PDC_INSTALL_INCLUDE_DIR}
  COMPONENT
    headers
)

#-----------------------------------------------------------------------------
# Add Target(s) to CMake Install
#-----------------------------------------------------------------------------

install(
  TARGETS
    pdc 
  EXPORT
    ${PDC_EXPORTED_TARGETS}
  LIBRARY DESTINATION ${PDC_INSTALL_LIB_DIR}
  ARCHIVE DESTINATION ${PDC_INSTALL_LIB_DIR}
  RUNTIME DESTINATION ${PDC_INSTALL_BIN_DIR}
)

#-----------------------------------------------------------------------------
# Add Target(s) to CMake Install for import into other projects
#-----------------------------------------------------------------------------
install(
  EXPORT
    ${PDC_EXPORTED_TARGETS}
  DESTINATION
    ${PDC_INSTALL_DATA_DIR}/cmake/pdc
  FILE
    ${PDC_EXPORTED_TARGETS}.cmake
)

#-----------------------------------------------------------------------------
# Export all exported targets to the build tree for use by parent project
#-----------------------------------------------------------------------------
if(NOT PDC_EXTERNALLY_CONFIGURED)
EXPORT (
  TARGETS
    ${PDC_EXPORTED_LIBS}
  FILE
    ${PDC_EXPORTED_TARGETS}.cmake
  APPEND
)
endif()

#------------------------------------------------------------------------------
# Set variables for parent scope
#------------------------------------------------------------------------------
# Used by config.cmake.build.in and Testing
set(PDC_INCLUDES_BUILD_TIME
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CMAKE_CURRENT_BINARY_DIR}
  ${PDC_EXT_INCLUDE_DEPENDENCIES}
  PARENT_SCOPE
)

# Used by config.cmake.install.in
set(PDC_INCLUDES_INSTALL_TIME
  ${PDC_INSTALL_INCLUDE_DIR}
  ${PDC_EXT_INCLUDE_DEPENDENCIES}
  PARENT_SCOPE
)
